--- a/Tetris/Pages/GameOver.xaml
+++ b/Tetris/Pages/GameOver.xaml
@@ -2,9 +2,17 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="GameOver" IsEnabled="True" 
-        Width="1366" 
-        Height="768">
+        AllowsTransparency="True"
+        WindowState="Maximized"
+        WindowStyle="None"
+        ResizeMode="NoResize"
+        Width="{DynamicResource {x:Static SystemParameters.MaximizedPrimaryScreenWidthKey}}"
+        Height="{DynamicResource {x:Static SystemParameters.MaximizedPrimaryScreenHeightKey}}" 
+        Background="{x:Null}"
+        Closing="onClosing">
     <Grid>
-        
+        <Grid Background="Black" Opacity="0.5"></Grid>
+        <Grid Background="White" Margin="300,200,300,200">
+        </Grid>
     </Grid>
 </Window>
