--- a/Tetris/Pages/Pause.xaml
+++ b/Tetris/Pages/Pause.xaml
@@ -2,9 +2,14 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Pause" IsEnabled="True" 
-        Width="1366" 
-        Height="768">
+        Width="{DynamicResource {x:Static SystemParameters.MaximizedPrimaryScreenWidthKey}}"
+        Height="{DynamicResource {x:Static SystemParameters.MaximizedPrimaryScreenHeightKey}}" 
+        WindowStyle="None"
+        WindowState="Maximized"
+        ResizeMode="NoResize"
+        Closing="onClosing">
     <Grid>
-        
+        <Button Content="Resume" Height="81" HorizontalAlignment="Left" Margin="44,36,0,0" Name="resumeButton" VerticalAlignment="Top" Width="115" Click="resumeButton_Click" />
+        <Button Content="Restart" Height="81" HorizontalAlignment="Right" Margin="0,36,44,0" Name="restartButton" VerticalAlignment="Top" Width="115" Click="restartButton_Click" />
     </Grid>
 </Window>
