--- a/Tetris/Pages/GameOver.xaml
+++ b/Tetris/Pages/GameOver.xaml
@@ -1,18 +1,12 @@
-﻿<Window x:Class="Tetris.Pages.GameOver"
+﻿<Page x:Class="Tetris.Pages.GameOver"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="GameOver" IsEnabled="True" 
-        AllowsTransparency="True"
-        WindowState="Maximized"
-        WindowStyle="None"
-        ResizeMode="NoResize"
-        Width="{DynamicResource {x:Static SystemParameters.MaximizedPrimaryScreenWidthKey}}"
-        Height="{DynamicResource {x:Static SystemParameters.MaximizedPrimaryScreenHeightKey}}" 
-        Background="{x:Null}"
-        Closing="onClosing">
+        Width="{DynamicResource {x:Static SystemParameters.MaximizedPrimaryScreenWidthKey}}" 
+        Height="{DynamicResource {x:Static SystemParameters.MaximizedPrimaryScreenHeightKey}}"
+        Background="{x:Null}">
     <Grid>
-        <Grid Background="Black" Opacity="0.5"></Grid>
         <Grid Background="White" Margin="300,200,300,200">
         </Grid>
     </Grid>
-</Window>
+</Page>
