--- a/Tetris/Pages/Pause.xaml
+++ b/Tetris/Pages/Pause.xaml
@@ -1,15 +1,22 @@
-﻿<Window x:Class="Tetris.Pages.Pause"
+﻿<Page x:Class="Tetris.Pages.Pause"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:k="http://schemas.microsoft.com/kinect/2013"
         Title="Pause" IsEnabled="True" 
-        Width="{DynamicResource {x:Static SystemParameters.MaximizedPrimaryScreenWidthKey}}"
-        Height="{DynamicResource {x:Static SystemParameters.MaximizedPrimaryScreenHeightKey}}" 
-        WindowStyle="None"
-        WindowState="Maximized"
-        ResizeMode="NoResize"
-        Closing="onClosing">
-    <Grid>
-        <Button Content="Resume" Height="81" HorizontalAlignment="Left" Margin="44,36,0,0" Name="resumeButton" VerticalAlignment="Top" Width="115" Click="resumeButton_Click" />
-        <Button Content="Restart" Height="81" HorizontalAlignment="Right" Margin="0,36,44,0" Name="restartButton" VerticalAlignment="Top" Width="115" Click="restartButton_Click" />
-    </Grid>
-</Window>
+        Width="{DynamicResource {x:Static SystemParameters.MaximizedPrimaryScreenWidthKey}}" 
+        Height="{DynamicResource {x:Static SystemParameters.MaximizedPrimaryScreenHeightKey}}"
+        ShowsNavigationUI="False"
+        Unloaded="Page_Unloaded"
+      >
+    <k:KinectRegion x:Name="kinectRegion">
+        <Grid>
+            <Grid Margin="10 0 10 20">
+                <Image HorizontalAlignment="Left" VerticalAlignment="Bottom" Stretch="None" Margin="0 0 0 4"/>
+                <k:KinectUserViewer k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" Height="200" Margin="20,20" HorizontalAlignment="Center" VerticalAlignment="Top" />
+                <k:KinectSensorChooserUI HorizontalAlignment="Center" VerticalAlignment="Top" Name="sensorChooserUi" />
+            </Grid>
+            <Button Content="Resume" Height="81" HorizontalAlignment="Left" Margin="44,36,0,0" Name="resumeButton" VerticalAlignment="Top" Width="115" Click="resumeButton_Click" />
+            <Button Content="Restart" Height="81" HorizontalAlignment="Right" Margin="0,36,44,0" Name="restartButton" VerticalAlignment="Top" Width="115" Click="restartButton_Click" />
+        </Grid>
+    </k:KinectRegion>
+</Page>
