--- a/Tetris/Pages/Pause.xaml
+++ b/Tetris/Pages/Pause.xaml
@@ -6,7 +6,6 @@
         Width="{DynamicResource {x:Static SystemParameters.MaximizedPrimaryScreenWidthKey}}" 
         Height="{DynamicResource {x:Static SystemParameters.MaximizedPrimaryScreenHeightKey}}"
         ShowsNavigationUI="False"
-        Unloaded="Page_Unloaded"
       >
     <k:KinectRegion x:Name="kinectRegion">
         <Grid>
@@ -15,8 +14,8 @@
                 <k:KinectUserViewer k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" Height="200" Margin="20,20" HorizontalAlignment="Center" VerticalAlignment="Top" />
                 <k:KinectSensorChooserUI HorizontalAlignment="Center" VerticalAlignment="Top" Name="sensorChooserUi" />
             </Grid>
-            <Button Content="Resume" Height="81" HorizontalAlignment="Left" Margin="44,36,0,0" Name="resumeButton" VerticalAlignment="Top" Width="115" Click="resumeButton_Click" />
-            <Button Content="Restart" Height="81" HorizontalAlignment="Right" Margin="0,36,44,0" Name="restartButton" VerticalAlignment="Top" Width="115" Click="restartButton_Click" />
+            <k:KinectTileButton BorderThickness="3" Content="Resume" Height="150" Width="150" HorizontalAlignment="Left" Margin="44,36,0,0" Name="resumeButton" VerticalAlignment="Top" Foreground="White" k:KinectTileButton.Click="resumeButton_Click" />
+            <k:KinectTileButton BorderThickness="3" Content="Restart" Height="150" Width="150" HorizontalAlignment="Right" Margin="0,36,44,0" Name="restartButton" VerticalAlignment="Top" Foreground="White" k:KinectTileButton.Click="restartButton_Click" />
         </Grid>
     </k:KinectRegion>
 </Page>
