Added comments to Tetris.cs and fixed several bugs

--- a/Tetris/MainWindow.xaml
+++ b/Tetris/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         Title="MainWindow"
         IsEnabled="True"
+        WindowState="Maximized"
         Width="{DynamicResource {x:Static SystemParameters.MaximizedPrimaryScreenWidthKey}}" 
         Height="{DynamicResource {x:Static SystemParameters.MaximizedPrimaryScreenHeightKey}}"
         Closing="Window_Closing"
