--- a/Tetris/Pages/GameOverHighscore.xaml
+++ b/Tetris/Pages/GameOverHighscore.xaml
@@ -2,8 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="GameOver" IsEnabled="True" 
-        Width="{DynamicResource {x:Static SystemParameters.MaximizedPrimaryScreenWidthKey}}" 
-        Height="{DynamicResource {x:Static SystemParameters.MaximizedPrimaryScreenHeightKey}}"
+        Width="1280" 
+        Height="720"
         Background="{x:Null}">
     <Grid>
         <Grid Background="White" Margin="300,200,300,200">
