--- a/Tetris/Pages/StartPopup.xaml
+++ b/Tetris/Pages/StartPopup.xaml
@@ -6,7 +6,7 @@
         Height="720"
         Background="{x:Null}" xmlns:k="http://schemas.microsoft.com/kinect/2013">
     <Grid>
-        <k:KinectTileButton k:KinectTileButton.Click="PlayButton_Click"  Height="158" Width="158" Foreground="White" 
-                            BorderThickness="4" Content="Play" HorizontalAlignment="Center" Name="PlayButton" VerticalAlignment="Center"/>
+        <k:KinectCircleButton k:KinectCircleButton.Click="PlayButton_Click" Style="{StaticResource PlayButtonStyle}" Foreground="White" Height="300" Label="Play" HorizontalAlignment="Center" Name="PlayButton" VerticalAlignment="Center">
+        </k:KinectCircleButton>
     </Grid>
 </Page>
