--- a/Tetris/Pages/GameOver.xaml
+++ b/Tetris/Pages/GameOver.xaml
@@ -10,7 +10,11 @@
             <Label HorizontalAlignment="Center" Name="gameover_label" Content="Game Over" FontSize="36" />
             <Label HorizontalAlignment="Center" Name="score" Content="0" FontSize="20" Width="192" Margin="228,70,36,30" />
             <Label HorizontalAlignment="Center" Content="Score: " FontSize="20" Margin="-80,70,0,70" />
-            <k:KinectTileButton k:KinectTileButton.Click="RestartButton_Click"  Height="158" Width="158" Foreground="White" BorderThickness="4" Content="Restart" HorizontalAlignment="Center" Name="RestartButton" VerticalAlignment="Bottom" Margin="0,-79"/>
+            
+            <!-- Ellipse to fill background of circle button as white circle and not as white square, since kinectCircleButton is defined as
+                   a square -->
+            <Ellipse Fill="White" Height="90" Width="90" Margin="0, -45" VerticalAlignment="Bottom"></Ellipse>
+            <k:KinectCircleButton k:KinectCircleButton.Click="RestartButton_Click" Style="{StaticResource RestartButtonStyle}" Height="158" Width="158" LabelPosition="None" Label="Restart" HorizontalAlignment="Center" Name="RestartButton" VerticalAlignment="Bottom" Margin="0,-79"/>
         </Grid>
     </Grid>
 </Page>
