--- a/Tetris/Pages/GameOverHighscore.xaml
+++ b/Tetris/Pages/GameOverHighscore.xaml
@@ -1,19 +1,26 @@
 ﻿<Page x:Class="Tetris.Pages.GameOverHighscore"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:k="http://schemas.microsoft.com/kinect/2013"
         Title="GameOver" IsEnabled="True" 
         Width="1280" 
         Height="720"
+        Loaded="Page_Loaded"
         Background="{x:Null}">
     <Grid>
         <Grid Background="White" Margin="300,200,300,200">
-            <Label HorizontalAlignment="Center" Name="gameover_label" Content="Game Over" FontSize="36" Margin="297,0,297,429" />
-            <Label HorizontalAlignment="Center" Content="New highscore!" FontSize="20" Margin="55" Width="145" />
+            <Label HorizontalAlignment="Center" Name="gameover_label" Content="Game Over" FontSize="36" />
+            <Label HorizontalAlignment="Center" Content="New highscore!" FontSize="20" Margin="268,55,260,228" Width="152" />
             <Label HorizontalAlignment="Center" Name="score" Content="0" FontSize="20" Margin="430,117,234,329" Width="192" />
             <Label HorizontalAlignment="Center" Content="Score: " FontSize="20" Margin="356,117,432,329" />
-            <Label HorizontalAlignment="Center" VerticalAlignment="Bottom" Content="Nome" FontSize="20" Margin="80" />
-            <TextBox Height="23" HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="120" Margin="60" Name="submit_name" TabIndex="0"/>
-            <Button Content="Submit" Height="23" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="30" Name="submit_button" Width="75" Click="onSubmit" />
+            <Ellipse Fill="White" Height="90" Width="90" Margin="0, -45" VerticalAlignment="Bottom"></Ellipse>
+            <k:KinectCircleButton k:KinectCircleButton.Click="onSubmit" Height="158" Width="158" LabelPosition="None" HorizontalAlignment="Center" Name="Submit" VerticalAlignment="Bottom" Margin="0,-79"/>
+            <Grid HorizontalAlignment="Center" Name="lettersGrid" Margin="150,85,150,50" Width="387">
+                <TextBlock Name="letter1" Background="LightGray" FontFamily="Segoe UI" FontSize="50" Height="76" HorizontalAlignment="Center" Text="A" TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Center" Width="87" Margin="26,0,274,0" />
+                <TextBlock Name="letter2" Background="LightGray" FontFamily="Segoe UI" FontSize="50" Height="76" HorizontalAlignment="Center" Text="A" TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Center" Width="87" />
+                <TextBlock Name="letter3" Background="LightGray" FontFamily="Segoe UI" FontSize="50" Height="76" HorizontalAlignment="Center" Text="A" TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Center" Width="87" Margin="274,0,26,0" />
+            </Grid>
+            <TextBlock HorizontalAlignment="Center" TextAlignment="Justify" Margin="420,255,78,0" TextWrapping="Wrap" Text="Grab to submit your new highscore!" FontFamily="Segoe UI" FontSize="20" Width="182" />
         </Grid>
     </Grid>
 </Page>
